# IslandEngine

./: .gitattributes  .gitignore  Crusoe's Island Engine.sln  Crusoe's Island Engine_14.sln  Crusoe's Island.sln  README.md
FBXLoader/: FBXLoader.vcxproj  FBXLoader.vcxproj.filters
FBXLoader/include/: FBX.h
FBXLoader/src/: FBX.cxx  main.cxx
IslandEngine/: CMakeLists.txt  IslandEngine.vcxproj  IslandEngine.vcxproj.filters  IslandEngine_14.vcxproj  IslandEngine_14.vcxproj.filters  conanfile.py  conanfile.txt  config.h.in  xUnitTest.vcxproj  xUnitTest_14.vcxproj  xUnitTest_14.vcxproj.filters
IslandEngine/contents/geometry/: cube.h
IslandEngine/include/: config.h  engine.h
IslandEngine/include/Camera/: CameraBehaviour.h  CrusCamera.h
IslandEngine/include/Game/: CrusBounds.h  CrusComponent.h  CrusEntity.h  CrusObject.h  CrusRay.h  CrusRect.h  CrusRenderer.h  CrusSprite.h  CrusSpriteRenderer.h  CrusTransform.h
IslandEngine/include/Interface/: CrusCamera.h  CrusGrid.h  CrusPlayer.h  CrusTextOut.h  CrusViewport.h
IslandEngine/include/Manager/: CrusMeshLoader.h  CrusTARGA.h
IslandEngine/include/Math/: CrusMath.h  CrusMatrix.h  CrusMatrix.inl  CrusQuaternion.h  CrusQuaternion.inl  CrusVector.h  CrusVector.inl  GaussRoutines.h
IslandEngine/include/Renderer/: CrusColors.h  CrusExts.h  CrusMaterial.h  CrusOpenGLContext.h  CrusOpenGLExts.h  CrusPosition.h  CrusPosition.inl  CrusProgram.h  CrusRender.h  CrusRenderer.h  CrusTexture.h  CrusUV.h  CrusUV.inl  CrusVertex.h  CrusVertex.inl
IslandEngine/include/System/: CrusBook.h  CrusGamepad.h  CrusInput.h  CrusIsland.h  CrusJoystick.h  CrusMouse.h  CrusSplash.h  CrusSystem.h  CrusTime.h  CrusTypes.h  CrusWindow.h
IslandEngine/include/geometry/: torus.h
IslandEngine/include/xUnitTest/: xUnitTest.h  xUnitTestList.h  xUnitTestResult.h
IslandEngine/misc/: CRTP.txt
IslandEngine/resources/: resource.aps  resource.h  resource.rc
IslandEngine/src/: buffers.hxx  deviceObject.hxx  engine.cxx  glTF.cxx  glTF.hxx  helpers.hxx  main.cxx  main.hxx  memoryManager.hxx  mesh.hxx  resource.cxx  resource.hxx  vertex_format.hxx
IslandEngine/src/Camera/: CameraController.cxx  CameraController.h  CameraController.hxx  CrusCamera.cxx  MouseHandler.cxx  MouseHandler.h  MouseHandler.hxx
IslandEngine/src/Camera/handlers/: mouseHandler.cxx  mousehandler.hxx
IslandEngine/src/GAPI/: context.hxx  procedures.cxx
IslandEngine/src/Game/: CrusBounds.cxx  CrusComponent.cxx  CrusEntity.cxx  CrusObject.cxx  CrusRay.cxx  CrusRect.cxx  CrusRenderer.cxx  CrusSprite.cxx  CrusTransform.cxx
IslandEngine/src/Input/: InputManager.cxx  InputManager.hxx  MouseInput.cxx  MouseInput.hxx  inputDataTypes.hxx
IslandEngine/src/Interface/: CrusCamera.cxx  CrusGrid.cxx  CrusPlayer.cxx  CrusTextOut.cxx  CrusViewport.cxx
IslandEngine/src/Loaders/: AssetFabric.hxx  glTF.cxx  glTF.hxx
IslandEngine/src/Manager/: CrusMeshLoader.cxx  CrusTARGA.cxx
IslandEngine/src/Math/: CrusMatrix.cxx
IslandEngine/src/Renderer/: CrusExts.cxx  CrusOpenGLContext.cxx  CrusOpenGLExts.cxx  CrusProgram.cxx  CrusRender.cxx  CrusRenderer.cxx  CrusTexture.cxx  oglContext.hxx  oglProcedures.cxx
IslandEngine/src/Samples/: Cubemap.cxx
IslandEngine/src/System/: CrusBook.cxx  CrusGamepad.cxx  CrusInput.cxx  CrusJoystick.cxx  CrusMouse.cxx  CrusSplash.cxx  CrusSystem.cxx  CrusTime.cxx  CrusUSBIDs.cxx  CrusWindow.cxx  InputManager.cxx  InputManager.hxx  MouseInput.cxx  MouseInput.hxx
IslandEngine/src/camera/: cameraController.cxx  cameraController.hxx
IslandEngine/src/camera/handlers/: mouseHandler.cxx
IslandEngine/src/input/: inputDataTypes.hxx  inputManager.cxx  inputManager.hxx  mouseInput.cxx  mouseInput.hxx
IslandEngine/src/platform/: window.cxx  window.hxx
IslandEngine/src/xUnitTest/: main.cxx  xUnitTest.cxx  xUnitTestList.cxx  xUnitTestResult.cxx
IslandEngine/src/xUnitTest/SuiteTests/: xMath.cxx  xMatrix.cxx  xQuaternion.cxx  xVector.cxx
content/shaders/FlappyBird/: animated.glsl  background.glsl
content/shaders/Interface/: textout.glsl
contents/geometry/: cube  cube.h  geosphere  hydrant  teapot
contents/meshes/: cube.fbx
contents/shaders/: test.glsl  ubo_init.glsl
contents/shaders/Defaults/: Buffer-Objects-Initialization.glsl  Debug-SSAO-Kernel.glsl  Diffuse-Lambert.glsl  Dummy-Shader.glsl  Fullscreen-Quad.glsl  Radiance-Cube-Map.glsl  SSAO.glsl  SSAO1.glsl  Skybox-Cubed.glsl  Solid-Wireframe.glsl  Sprites-Default.glsl  Unlit-Instanced.glsl  Unlit-Simple.glsl
contents/shaders/Includes/: ShaderHelpers.glsl  ShaderVariables.glsl
contents/shaders/Interface/: grid.glsl  textout.glsl
contents/textures/: RobotBoyWalkSprite.tga  paper-mill.hdr
contents/textures/Skybox/: skybox_nx.tga  skybox_ny.tga  skybox_nz.tga  skybox_px.tga  skybox_py.tga  (+1 more)
shaders/: test.glsl  ubo_init.glsl
shaders/Atmosphere/: atmosphere.glsl  sky.glsl
shaders/FlappyBird/: animated.glsl  background.glsl
shaders/Interface/: grid.glsl  textout.glsl
(+6 files in other folders)
